--- a/server-conf/nginx/nginx.conf
+++ b/server-conf/nginx/nginx.conf
@@ -2,7 +2,8 @@ server {
   listen 80;
   listen [::]:80;
 
-        server_name projectname.local www.projectname.local;
+        # must be the same as in .env
+        server_name mamaaa.mooo.com www.mamaaa.mooo.com;
 
         index index.php index.html index.htm;
         root /app/web;
